Fixed settings page overflow problem

--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -31,6 +31,12 @@
   overflow: auto;
 }
 
+
+.settings-container {
+    height: calc(100vh - 6em);
+    overflow: auto;
+}
+
 .settings-tabs {
   position: relative;
 }
